# SetToPy

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.swp  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  pyproject.toml  settopy.cpp  settopy_bindings.cpp  setup.py  test_performance.py  test_set.py
.github/workflows/: python-package.yml
settopy/: CMakeLists.txt  __init__.py  settopy.cpp  settopy_bindings.cpp
tests/: test_settopy.py
